# Dendritome_reconstruction

./: .gitignore  .gitlab-ci.yml  LICENSE
python/: imaris_io.py  package_pipeline.py  pipeline_arguments.py  pipeline_version.py  readme.md  run_pipeline.py  trained_models_catalogue.py  unit_tests_runner.py
python/misc/: convert_hoc_to_swc.py  convert_neurolucida_asc_to_swc.py  convert_rgb_images_to_gray.py  convert_swc_to_hoc.py  high_sample_rate_crop.py  histogram_sequence_matching.py  neuron_morphology.py
python/neural_networks/: conv_lstm.py  deploy_net.py  encoder_decoder.py  nissl_net.py
python/unit_tests/: __init__.py  test_bounding_box.py  test_image_reader.py  util.py
src/: CMakeLists.txt  README.md  change_log
src/algorithm/: CMakeLists.txt  mcp3d_algorithm_macros.hpp  mcp3d_all_path_pruning.cpp  mcp3d_all_path_pruning.hpp  mcp3d_connected_component_3d.cpp  mcp3d_connected_component_3d.hpp  mcp3d_dijkstra.hpp  mcp3d_graph.hpp  mcp3d_heap.hpp  mcp3d_octree.hpp  mcp3d_vertex.hpp
src/benchmark/: CMakeLists.txt
src/benchmark/cluster_runtime/: conv_thread_number.cpp  conv_thread_number.sh  cv_vs_eigen.cpp  cv_vs_eigen.sh  qsub_conv_thread_number.sh  qsub_cv_vs_eigen.sh
src/benchmark/profile/: profile_write_pyramid.cpp
src/cmake/: FindBOOST.cmake  FindEIGEN.cmake  FindGTEST.cmake
src/common/: CMakeLists.txt  mcp3d_common.hpp  mcp3d_exceptions.cpp  mcp3d_exceptions.hpp  mcp3d_macros.hpp  mcp3d_paths.cpp  mcp3d_paths.hpp  mcp3d_types.hpp  mcp3d_utility.cpp  mcp3d_utility.hpp
src/external_tools/: CMakeLists.txt
src/external_tools/vaa3d/neuron_tracing/all_path_pruning2/: CMakeLists.txt  all_path_pruning2.cpp  all_path_pruning2.hpp  app2_image_preprocess.cpp  app2_image_preprocess.hpp  app2_main.cpp  app2_parameters.cpp  app2_parameters.hpp  fastmarching_dt.h  fastmarching_general.hpp  fastmarching_tree.h  hierarchy_prune.h  smooth_curve.h
src/external_tools/vaa3d/swc_utility/: CMakeLists.txt  markers.cpp  markers.h  neuron_tree.hpp  swc_file.cpp  swc_file.hpp
src/external_tools/vaa3d/swc_utility/resample_swc/: CMakeLists.txt  resample_swc.cpp  resample_swc.hpp  resample_swc_main.cpp
src/external_tools/vaa3d/swc_utility/sort_swc/: CMakeLists.txt  sort_swc_main.cpp
src/external_tools/vaa3d/swc_utility/spatial_distance/: CMakeLists.txt  spatial_distance.cpp  v_neuronswc.cpp  v_neuronswc.hpp
src/external_tools/vaa3d/swc_utility/spatial_distance_windows/: CMakeLists.txt  neuron_sim_scores.cpp  neuron_sim_scores.hpp  spatial_distance.cpp  swc_file.cpp  swc_file.hpp  v_neuronswc.cpp  xyz.hpp
src/image/: CMakeLists.txt  mcp3d_channel_info.cpp  mcp3d_channel_info.hpp  mcp3d_hdf5_format.cpp  mcp3d_hdf5_format.hpp  mcp3d_image.cpp  mcp3d_image.hpp  mcp3d_image_base.cpp  mcp3d_image_base.hpp  mcp3d_image_constants.hpp  mcp3d_image_formats.cpp  mcp3d_image_formats.hpp  mcp3d_image_in_memory.cpp  mcp3d_image_in_memory.hpp  mcp3d_image_info.cpp  mcp3d_image_info.hpp  mcp3d_image_io.cpp  mcp3d_image_io.hpp  mcp3d_image_macros.hpp  mcp3d_image_maths.hpp  mcp3d_image_utils.cpp  mcp3d_image_utils.hpp  mcp3d_image_view.cpp  mcp3d_image_view.hpp  mcp3d_imaris_format.cpp  mcp3d_imaris_format.hpp  mcp3d_ome_tiff_format.cpp  mcp3d_ome_tiff_format.hpp  mcp3d_tiff_format.cpp  mcp3d_tiff_format.hpp
src/image_interface/: CMakeLists.txt  mcp3d_file_formats.cpp  mcp3d_file_formats.hpp  mcp3d_hdf5_utils.cpp  mcp3d_hdf5_utils.hpp  mcp3d_imaris_util.cpp  mcp3d_imaris_util.hpp  mcp3d_tiff_io.cpp  mcp3d_tiff_io.hpp  mcp3d_tiff_utils.cpp  mcp3d_tiff_utils.hpp  mcp3d_voxel_types.cpp  mcp3d_voxel_types.hpp
src/image_layout/: CMakeLists.txt  mcp3d_channel_layout.cpp  mcp3d_channel_layout.hpp  mcp3d_channel_pyr_slices.cpp  mcp3d_channel_pyr_slices.hpp  mcp3d_image_layout.hpp  mcp3d_image_layout_constants.hpp  mcp3d_volume_layout.cpp  mcp3d_volume_layout.hpp  mcp3d_volume_metadata.cpp  mcp3d_volume_metadata.hpp
src/legacy/: hdf5_parallel_test.cpp  line_filter.cpp  line_filter.hpp  mcp3d_image_intensity.cpp  mcp3d_image_intensity.hpp  pixel_conversion.hpp
src/parallel/: CMakeLists.txt  async_remove_path_mpi.cpp  async_remove_path_mpi.sh  mpio_util.cpp  mpio_util.hpp  par_cc_3d.sh  par_cc_3d_perf.py  par_connected_component_3d.cpp  par_connected_component_3d.hpp  qsub_async_remove_path_mpi.sh  qsub_par_cc_3d.sh  qsub_write_image_pyramid_mpi.sh  write_image_pyramid_mpi.cpp  write_image_pyramid_mpi.sh
src/python/: CMakeLists.txt  mcp3d_cython.pxd  pymcp3d.pyx
src/test/: CMakeLists.txt  make_ome_tiff_test_data.py  mcp3d_mpi_tests.cpp  mcp3d_unit_tests.cpp  ndi_label.py  test.py  test_async_remove_path_mpi.cpp  test_cc_label_3d_single_core.cpp  test_cc_label_3d_single_core.hpp  test_mcp3d_all_path_pruning.cpp  test_mcp3d_channel_layout.cpp  test_mcp3d_channel_layout.hpp  test_mcp3d_channel_pyr_slices.cpp  test_mcp3d_channel_pyr_slices.hpp  test_mcp3d_dijkstra.cpp  test_mcp3d_dijkstra.hpp  test_mcp3d_exceptions.cpp  test_mcp3d_graph.cpp  test_mcp3d_hdf5_format.cpp  test_mcp3d_heap.cpp  test_mcp3d_image.cpp  test_mcp3d_image_info.cpp  test_mcp3d_image_maths.cpp  test_mcp3d_image_utils.cpp  test_mcp3d_image_view.cpp  test_mcp3d_ome_tiff_format.cpp  test_mcp3d_tiff_format.cpp  test_mcp3d_utility.cpp  test_mcp3d_vertex.cpp  test_mcp3d_voxel_types.cpp  test_mpi.cpp  test_openmp.cpp  test_utility_internal.cpp  test_utility_internal.hpp
src/test/infrastructure/: CMakeLists.txt  mpi_io_test.cpp  mpi_io_test.sh  mpi_simple_test.cpp  mpi_simple_test.sh  qsub_mpi_io_test.sh  qsub_mpi_simple_test.sh
src/util/: bootstrap_wrapper.sh  build_ext_libraries.py  common_dirs.py  gen_hostfile.py  get_project_dir.sh  grid_build.sh  local_deploy_build.sh  verify_caller.sh
